two minor style fixes for disabled dropdown item state and redactor spacing

--- a/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/_dropdown.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/_dropdown.scss
@@ -6,7 +6,8 @@
   + .dropdown-item { border-top: $border-width solid $border-color; }
   &.disabled, &:disabled {
     background-color: $body-bg;
-    cursor: not-allowed;
+    cursor: default;
+    pointer-events: none;
   }
 }
 
