--- a/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_redactor.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_redactor.scss
@@ -3,7 +3,7 @@
   .redactor-editor, .redactor-box, .redactor-box textarea { z-index: 0 !important; }
 }
 .redactor-box {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
   border: $border-width solid $border-color;
 }
 .redactor-toolbar {
